common/common.scss
.custom-footer {
  display: flex;
  flex-wrap: wrap;
  background: var(--header_background);
  color: var(--primary-low-rgb);
  .wrap {
    box-sizing: border-box;
  }

  .flexbox {
    width: calc(var(--d-sidebar-width) + var(--d-max-width));
    max-width: 100%;
    display: flex;
    flex-wrap: wrap;
    color: var(--primary);
    padding: 2em 1em 1em 1em;
    box-sizing: border-box;
  }

  .first-box {
    max-width: 20%;
    min-width: 200px;

    .heading {
      font-size: $font-up-2;
      font-weight: bold;
      margin-bottom: 0.5em;
      display: block;
    }

    .blurb {
      color: var(--secondary-high);
    }
  }

  .second-box {
    flex: 1;

    .links {
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-end;

      ul {
        list-style: none;
        margin: 0;
        min-width: 100px;
      }

      li {
        margin: 0.5em 0;
      }
    }
  }

  .third-box {
    width: 100%;
    display: flex;
    align-items: center;
    border-top: 1px solid rgba(var(--primary-low-rgb), 0.05);

    .social {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: flex-end;

      .social-link {
        margin: 20px 10px;
        display: flex;
        align-items: center;
        justify-content: center;

        .d-icon {
          color: var(--primary);
          min-width: unset;
          margin: 0;
          font-size: $font-up-2;
          opacity: 1;
        }
      }
    }

    .small-link {
      color: var(--secondary-high);
      margin: 0 0.25em;
      font-size: $font-down-2;
    }
  }

  .footer-links {
    flex: 1;
  }

  .list span {
    font-weight: bold;
  }

  .footer-section-link-wrapper a {
    color: var(--secondary-high);
  }

  .list {
    margin: 1em;
    margin-top: 0;
  }

  .d-icon {
    margin-right: 5px;
    opacity: 0.7;
    min-width: 16px;
    text-align: center;

    &.fa-none {
      min-width: unset;
    }

    .rtl & {
      margin-right: 0;
      margin-left: 5px;
    }
  }
}

#main-outlet {
  // stick footer to bottom of short pages
  min-height: 85vh;
}

@media screen and (max-width: $large-width) {
  .custom-footer {
    .flexbox {
      padding: 2em 1.5em 1em 1.5em;
    }

    .first-box {
      max-width: 100%;
      border-bottom: 1px solid rgba(var(--primary-low-rgb), 0.05);
      margin-bottom: 1em;
      padding-bottom: 1em;

      .blurb {
        display: flex;
        align-items: center;
      }
    }

    .third-box {
      margin-top: 0.5em;
    }

    .second-box .links {
      justify-content: space-between;
    }

    .list {
      margin: 0;
      margin-top: 1em;
    }

    .first-box,
    .second-box,
    .third-box {
      flex: 1 1 100%;
    }
  }
}

// 平板设备优化 (768px - 1024px)
@media screen and (min-width: 701px) and (max-width: 1024px) {
  .custom-footer {
    .flexbox {
      width: 100%;
      padding: 2em 2em 1em 2em;
    }

    .first-box {
      max-width: 35%;
      min-width: 250px;
    }

    .second-box {
      max-width: 65%;

      .links ul {
        min-width: 120px;
        margin: 0 1em;
      }
    }

    .list {
      font-size: $font-0;
    }

    .third-box {
      flex-direction: column;
      align-items: flex-start;
      padding-top: 1em;

      .footer-links {
        order: 2;
        margin-top: 1em;
      }

      .social {
        order: 1;
        justify-content: flex-start;
        width: 100%;
      }
    }
  }
}

@media screen and (max-width: 700px) {
  .custom-footer {
    .flexbox {
      width: 100%;
      padding: 1.5em 1em;
    }

    .first-box {
      width: 100%;
    }

    .list {
      margin-top: 1em;
      display: inline-block;
      vertical-align: top;
      min-width: 50%;
      font-size: $font-up-1;
    }

    .links {
      display: inline-block;
    }

    .third-box {
      flex-direction: column;
      align-items: center;
      text-align: center;

      .footer-links {
        order: 2;
        margin-top: 1em;
      }

      .social {
        order: 1;
        justify-content: center;
      }
    }
  }
}

// 小屏移动设备优化 (< 480px)
@media screen and (max-width: 480px) {
  .custom-footer {
    .flexbox {
      padding: 1em 0.75em;
    }

    .list {
      min-width: 100%;
      margin-top: 0.75em;
    }

    .second-box .links ul {
      margin: 0.5em 0;
    }

    .third-box .social .social-link {
      margin: 15px 8px;
    }

    .first-box .heading {
      font-size: $font-up-1;
    }
  }
}

.static-login .custom-footer {
  margin-top: 3em;
}

